# package-json-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  renovate.json
.devcontainer/: devcontainer.json
.github/workflows/: tests.yml
src/: fs.rs  lib.rs  manager.rs
src/fs/: write_options.rs
src/opts/: write.rs
src/schema/: default.rs  ignore.rs  mod.rs
