[package]
name = "package-json-rs"
version = "0.0.1"
edition = "2021"
author = "Liu Bowen <asyncmode@outlook.com>"
description = "package.json manager for Rust"
keywords = ["package.json", "json", "npm", "node.js"]
category = "package.json"
repository = "https://github.com/lbwa/package-json-rs"
publish = ["package_json"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.138", features = ["derive"] }
anyhow = "1.0.58"
serde_json = "1.0.82"

[features]
default = []
schema = []