[package]
name = "package-json"
version = "0.5.0"
edition = "2021"
authors = ["Liu Bowen <bowen_dev@outlook.com>"]
description = "package.json manager for Rust"
keywords = ["package_json", "nodejs", "npm", "yarn", "pnpm"]
categories = ["data-structures", "encoding", "api-bindings"]
repository = "https://github.com/lbwa/package-json-rs"
license = "MIT"
readme = "README.md"
exclude = [".*/"]

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.138", features = ["derive"] }
anyhow = "1.0.58"
serde_json = "1.0.138"
derive_builder = "0.20.2"

[features]
default = []

[dev-dependencies]
tempfile = "3.16.0"
